[package]
name = "mdbat"
version = "0.1.0"
edition = "2021"
authors = ["LeSnake <dev.lesnake@posteo.de>"]
description = "A simple and fancy way to to display markdown documents in your terminal (based on termimad)"
categories = ["command-line-utilities"]
keywords = ["markdown", "md", "cat", "cli", "less"]
publish =  true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
atty = "0.2.14"
clap = { version = "4.4.7", features = ["derive", "cargo"] }
termimad = "0.26.1"
