[package]
name = "mdbat"
version = "0.1.0"
edition = "2021"
authors = ["LeSnake <dev.lesnake@posteo.de>"]
description = "A simple and fancy way to to display markdown documents in your terminal (based on termimad)"
categories = ["command-line-utilities"]
keywords = ["markdown", "md", "cat", "cli", "less"]
repository = "https://github.com/LeSnake04/mdbat"
license = "AGPL-3.0-or-later"
publish =  true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive", "cargo"] }
is-terminal = "0.4.9"
termimad = "0.26.1"
